Foi feita a refatoração do código
