# src/main/java/br/com/ronald/api/BuscaApi.java
@@ -1,24 +1,12 @@
 package br.com.ronald.api;
-
-import java.util.regex.PatternSyntaxException;
-
-import javax.validation.constraints.Pattern;
-import javax.ws.rs.BadRequestException;
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.Response;
 
-import com.google.gson.Gson;
-
-import br.com.correios.bsb.sigep.master.bean.cliente.AtendeCliente;
-import br.com.correios.bsb.sigep.master.bean.cliente.AtendeClienteService;
-import br.com.correios.bsb.sigep.master.bean.cliente.EnderecoERP;
-import br.com.correios.bsb.sigep.master.bean.cliente.SQLException_Exception;
-import br.com.correios.bsb.sigep.master.bean.cliente.SigepClienteException;
+import br.com.ronald.controllers.CepController;
 import br.com.ronald.model.Address;
-import br.com.ronald.model.Error;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiResponse;
@@ -38,32 +26,9 @@ import io.swagger.annotations.ApiResponses;
         @ApiResponse(code = 500, message = "Server Error", response = Error.class)
     })
     public Response getAddress(@PathParam("cep") String cep) {
+    	CepController cepController = new CepController();
     	
-    	AtendeClienteService service = new AtendeClienteService();
-    	AtendeCliente cliente = service.getAtendeClientePort();
-    	String enderecoJson;
-    	EnderecoERP endereco;
-    	Response response;
-    	
-    	if (!cep.matches("\\d{5}-?\\d{3}")) {
-    		return  Response.status(400).entity(new Error("cep Formated Invalid")).build();
-    	}
-    	
-    	
-    	try {
-    		endereco = cliente.consultaCEP(cep);
-    		enderecoJson = new Gson().toJson(endereco);
-			response = Response.ok().entity(enderecoJson).build();
-		} catch (SQLException_Exception e) {
-			e.printStackTrace();
-			response = Response.status(500).entity(new Error("Server Internal Error")).build();
-		} catch (SigepClienteException e) {
-			response = Response.status(404).entity(new Error("Address Not found")).build();
-			e.printStackTrace();
-		} 
-    	
-    	
-		return response;
+		return cepController.root_getRequest(cep) ;
     	
     }
 }
